@@ -24,10 +24,18 @@ import org.apache.tinkerpop.gremlin.process.traversal.P;
 import org.apache.tinkerpop.gremlin.process.traversal.TraversalEngine;
 import org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal;
 import org.apache.tinkerpop.gremlin.process.traversal.step.filter.HasStep;
+import org.apache.tinkerpop.gremlin.process.traversal.step.filter.OrStep;
+import org.apache.tinkerpop.gremlin.process.traversal.step.filter.TraversalFilterStep;
+import org.apache.tinkerpop.gremlin.process.traversal.step.map.VertexStep;
 import org.apache.tinkerpop.gremlin.tinkergraph.process.traversal.step.sideEffect.TinkerGraphStep;
 import org.junit.Test;
 
+import java.util.Arrays;
+
+import static org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.__.has;
+import static org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.__.out;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
 
 /**
  * @author Marko A. Rodriguez (http://markorodriguez.com)
@@ -35,6 +43,45 @@ import static org.junit.Assert.assertEquals;
  */
 
 public class TinkerGraphStepStrategyTest extends AbstractGremlinProcessTest {
+
+    @Test
+    @IgnoreEngine(TraversalEngine.Type.COMPUTER)
+    public void shouldSkipFilterSteps() {
+        GraphTraversal.Admin<?, ?> traversal = g.V().as("a").has("name", "marko").as("b").has("nothing").has("age", 32).as("c").asAdmin();
+        traversal.applyStrategies();
+        assertEquals(2, traversal.getSteps().size());
+        assertEquals(TinkerGraphStep.class, traversal.getStartStep().getClass());
+        assertEquals(TraversalFilterStep.class, traversal.getEndStep().getClass());
+        assertTrue(traversal.getStartStep().getLabels().containsAll(Arrays.asList("a", "b")));
+        assertTrue(traversal.getEndStep().getLabels().containsAll(Arrays.asList("c")));
+        assertEquals("name", ((TinkerGraphStep<?, ?>) traversal.getStartStep()).getHasContainers().get(0).getKey());
+        assertEquals("marko", ((TinkerGraphStep<?, ?>) traversal.getStartStep()).getHasContainers().get(0).getValue());
+        assertEquals("age", ((TinkerGraphStep<?, ?>) traversal.getStartStep()).getHasContainers().get(1).getKey());
+        assertEquals(32, ((TinkerGraphStep<?, ?>) traversal.getStartStep()).getHasContainers().get(1).getValue());
+        //
+        traversal = g.V().as("a").has("name", "marko").as("b").or(has("nothing"), out("something")).has("age", 32).as("c").asAdmin();
+        traversal.applyStrategies();
+        assertEquals(2, traversal.getSteps().size());
+        assertEquals(TinkerGraphStep.class, traversal.getStartStep().getClass());
+        assertEquals(OrStep.class, traversal.getEndStep().getClass());
+        assertTrue(traversal.getStartStep().getLabels().containsAll(Arrays.asList("a", "b")));
+        assertTrue(traversal.getEndStep().getLabels().containsAll(Arrays.asList("c")));
+        assertEquals("name", ((TinkerGraphStep<?, ?>) traversal.getStartStep()).getHasContainers().get(0).getKey());
+        assertEquals("marko", ((TinkerGraphStep<?, ?>) traversal.getStartStep()).getHasContainers().get(0).getValue());
+        assertEquals("age", ((TinkerGraphStep<?, ?>) traversal.getStartStep()).getHasContainers().get(1).getKey());
+        assertEquals(32, ((TinkerGraphStep<?, ?>) traversal.getStartStep()).getHasContainers().get(1).getValue());
+        //
+        traversal = g.V().as("a").has("name", "marko").as("b").out("something").has("age", 32).as("c").asAdmin();
+        traversal.applyStrategies();
+        assertEquals(3, traversal.getSteps().size());
+        assertEquals(TinkerGraphStep.class, traversal.getStartStep().getClass());
+        assertEquals(VertexStep.class, traversal.getSteps().get(1).getClass());
+        assertEquals(HasStep.class, traversal.getEndStep().getClass());
+        assertTrue(traversal.getStartStep().getLabels().containsAll(Arrays.asList("a", "b")));
+        assertTrue(traversal.getEndStep().getLabels().containsAll(Arrays.asList("c")));
+        assertEquals("name", ((TinkerGraphStep<?, ?>) traversal.getStartStep()).getHasContainers().get(0).getKey());
+        assertEquals("marko", ((TinkerGraphStep<?, ?>) traversal.getStartStep()).getHasContainers().get(0).getValue());
+    }
 
     @Test
     @IgnoreEngine(TraversalEngine.Type.COMPUTER)
@@ -75,7 +122,7 @@ public class TinkerGraphStepStrategyTest extends AbstractGremlinProcessTest {
         assertEquals(TinkerGraphStep.class, traversal.getSteps().get(2).getClass());
         assertEquals(1, ((TinkerGraphStep) traversal.getSteps().get(2)).getHasContainers().size());
         assertEquals("name", ((TinkerGraphStep<?, ?>) traversal.getSteps().get(2)).getHasContainers().get(0).getKey());
-        assertEquals("daniel", ((TinkerGraphStep<?,?>) traversal.getSteps().get(2)).getHasContainers().get(0).getValue());
+        assertEquals("daniel", ((TinkerGraphStep<?, ?>) traversal.getSteps().get(2)).getHasContainers().get(0).getValue());
         assertEquals(TinkerGraphStep.class, traversal.getEndStep().getClass());
     }
 
